# bevy_snake_3d

./: .gitignore  Cargo.toml  README.md
src/: animation.rs  camera.rs  game_flow.rs  main.rs  menu.rs  player.rs  utils.rs
