[package]
name = "snake_3d"
version = "0.1.0"
edition = "2021"
author = ["Le Quang Thai <thaile.isme@gmail.com>"]
description = "A simple 3d snake game"
categories = ["game-development"]
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.dev.package.bevy]
opt-level = 3

[dependencies]
bevy = { version = "0.15.0-rc.2" }
rand = "0.8.5"